--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: mariadb:10.8-jammy
     restart: always
     environment:
+      - MARIADB_DATABASE=${MARIADB_DATABASE}
       - MARIADB_USER=${MARIADB_USER}
       - MARIADB_PASSWORD=${MARIADB_PASSWORD}
       - MARIADB_ROOT_PASSWORD=${MARIADB_ROOT_PASSWORD}
