buch of changes (bad pratice i know) made signup page,
changed jwt storage, now we dont rely more on the device storage

but on the browser localstorage (easy to handle and dont require

access to device filesystem)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,8 @@
-JWT_SECRET=
+export DATABASE_URL=
+export MARIADB_USER=
+export MARIADB_PASSWORD=
+export MARIADB_ROOT_PASSWORD=
+export MARIADB_DATABASE=
+export DB_PORT=
+export SERVER_PORT=
+export JWT_SECRET=
