--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
     "http-status": "^1.5.3",
+    "jshashes": "^1.0.8",
     "jsonwebtoken": "^8.5.1",
     "ts-node": "^10.9.1"
   },
