--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.8.0",
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.14.2",
