--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "chalk": "^4.1.2",
     "history": "^4.9.0",
     "ionicons": "^6.0.3",
+    "mobx-react": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
