--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "ionicons": "^6.0.3",
     "mobx-react": "^7.6.0",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.6.9",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-router": "^5.2.0",
