--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -2,16 +2,39 @@ name: Citrus Continuous Integration
 
 on:
   pull_request:
-    branches: [main]
+    branches:
+    - main
 
 jobs:
-  build_pull_request:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 19.2.0
-          working-directory: frontend
-      - run: cd fronted && npm ci
-      - run: cd fronted && ionic build android
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Install Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14
+
+    - name: Install Ionic CLI
+      run: npm install -g ionic
+
+    - name: Change working directory 
+      run: cd frontend
+
+    - name: Install dependencies
+      run: npm ci
+
+    - name: Build for production
+      run: ionic build --prod
+
+    - name: Lint
+      run: npx tslint --project tsconfig.json
+
+
+
+
+
+
