--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,6 @@
     "react-virtuoso": "^3.1.5",
     "rxjs": "^7.8.0",
     "swiper": "^8.4.5",
-    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -54,9 +53,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "android": "eslint ./src --ext .ts,.tsx --fix && ionic cap run android -l --external",
     "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src --ext .ts,.tsx",
+    "lintFix": "eslint ./src --ext .ts,.tsx --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -77,7 +79,16 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "4.5.0"
+    "@capacitor/cli": "4.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "eslint": "^8.32.0",
+    "eslint-config-standard-with-typescript": "^31.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.1",
+    "eslint-plugin-spellcheck": "^0.0.20",
+    "typescript": "^4.9.4"
   },
   "description": "An Ionic project"
 }
