--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,3 +11,16 @@ services:
       - MARIADB_ROOT_PASSWORD=${MARIADB_ROOT_PASSWORD}
     ports:
       - 3306:3306
+  backend:
+    container_name: "backend"
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 8000:8000
+    command: sh -c "/wait"
+    environment:
+      - WAIT_HOSTS=maria-db:3306
+      - WAIT_HOSTS_TIMEOUT=300
+      - WAIT_SLEEP_INTERVAL=30
+      - WAIT_HOST_CONNECT_TIMEOUT=30
