--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 REACT_APP_BACKEND_PORT=8000
-REACT_APP_BACKEND_HOST="10.64.196.52"
+REACT_APP_BACKEND_HOST="localhost"
 REACT_APP_FRONTEND_PORT=3000
 
