--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -11,27 +11,29 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+
+      - name: Setup java
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 19
+          node-version: 19.x
 
       - name: Install Ionic CLI
         run: npm install -g @ionic/cli
 
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm ci
+        run: npm install
 
       - name: Lint
         working-directory: ./frontend
         run: npm run lintFix
 
-      - name: Repair
-        working-directory: ./frontend
-        run: ionic repair
-
       - name: Build for production
         working-directory: ./frontend
-        run: ionic build --prod
+        run: ionic build 
 
