--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -35,5 +35,5 @@ jobs:
 
       - name: Build for production
         working-directory: ./frontend
-        run: ionic build 
+        run: ionic build --verbose
 
