(hopely) final fix for linting and building

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -17,5 +17,9 @@
     "jsx": "react-jsx"
   },
 
-  "include": ["src", "ionic.config.json"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "capacitor.config.ts"
+  ]
 }
