--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -10,7 +10,8 @@
     "sourceType": "module",
     "project": "tsconfig.json"
   },
-  "plugins": ["react", "spellcheck", "import"],
+  "plugins": ["react", "spellcheck", "import", "@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
   "rules": {
     "@typescript-eslint/no-floating-promises": "off",
     "@typescript-eslint/strict-boolean-expressions": "off",
