--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
       - name: Checkout code
@@ -20,14 +20,15 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 19.x
+          node-version: 19.0.2
 
       - name: Install Ionic CLI
+        working-directory: ./frontend
         run: npm install -g @ionic/cli
 
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm install && npm install @capacitor/cli
+        run: npm ci && npm install @capacitor/cli
 
       - name: Lint
         working-directory: ./frontend
@@ -39,5 +40,5 @@ jobs:
 
       - name: Build for production
         working-directory: ./frontend
-        run: ionic build --verbose
+        run: ionic build 
 
