--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -25,19 +25,23 @@ jobs:
         run: npm install -g @ionic/cli
 
       - name: Install app dependencies
+        working-directory: ./frontend
         run: npm ci && npm install @capacitor/cli
 
       - name: Build Ionic App
+        working-directory: ./frontend
         run: ionic build
 
       - name: Copy Android
+        working-directory: ./frontend
         run: ionic capacitor copy android
 
       - name: Build Android  APK
+        working-directory: ./frontend
         run: ionic capacitor build android --release --prod
 
       - name: Generate the Android App Bundle
-        working-directory: ./android/
+        working-directory: ./frontend/android/
         run: ./gradlew bundle
 
       - name: Upload dev APK
