--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -54,4 +54,4 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: app-release
-          path: apk/app.aab
+          path: ./android/apk/app.aab
