--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -51,7 +51,13 @@ jobs:
         run: ./gradlew bundle
 
       - name: Upload release bundle
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: app-release
-          path: ./frontend/android/apk/app.aab
+          path: ./frontend/android/app/build/outputs/bundle/release/app-release.aab
+            
+      - name: Upload relese apk 
+        uses: actions/upload-artifact@v3
+        with:
+          name: citrus
+          path: ./frontend/android/app/build/outputs/apk/release/app-release-unsigned.apk
