removed unnecessary build in integration.yaml and adjust release start conditions

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -38,9 +38,9 @@ jobs:
         working-directory: ./frontend
         run: ionic info
 
-      - name: Build for production
-        working-directory: ./frontend
-        env:
-          CI: false
-        run: ionic build 
+          # - name: Build for production
+          #working-directory: ./frontend
+          #env:
+          #CI: false
+          #run: ionic build 
 
