--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -11,7 +11,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-
       - name: Setup java
         uses: actions/setup-java@v1
         with:
@@ -22,22 +21,18 @@ jobs:
         with:
           node-version: 19.x
 
-      - name: Install Ionic CLI
-        working-directory: ./frontend
-        run: npm install -g @ionic/cli
-
+      # - name: Install Ionic CLI
+      #   working-directory: ./frontend
+      #   run: npm install -g @ionic/cli
+      #
       - name: Install dependencies
         working-directory: ./frontend
-        run: npm ci && npm install @capacitor/cli
-
+        run: npm ci 
+          
       - name: Lint
         working-directory: ./frontend
         run: npm run lintFix
-      
-      - name: debug
-        working-directory: ./frontend
-        run: ionic info
-
+     
           # - name: Build for production
           #working-directory: ./frontend
           #env:
