--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Download APK from build
         uses: actions/download-artifact@v3
         with:
-          name: apk  
+          name: citrus  
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
