fix hashFiles missing quotes

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -52,7 +52,7 @@ jobs:
           PATH: ./frontend/android/app/build/outputs/apk/release/app-release-unsigned.apk
         with:
           path: ./frontend/android/app/build/outputs/apk/release/app-release-unsigned.apk 
-          key: build-artifacts-${{hashFiles(./frontend/android/app/build/outputs/apk/release/app-release-unsigned.apk)}}
+          key: build-artifacts-${{hashFiles('./frontend/android/app/build/outputs/apk/release/app-release-unsigned.apk')}}
   release:
       name: Release APK
       needs: build 
@@ -64,7 +64,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ./frontend/android/app/build/outputs/apk/release/app-release-unsigned.apk
-          key: build-artifacts-${{hashFiles(./frontend/android/app/build/outputs/apk/release/app-release-unsigned.apk)}}
+          key: build-artifacts-${{hashFiles('./frontend/android/app/build/outputs/apk/release/app-release-unsigned.apk')}}
       
       - name: Create Release
         id: create_release
