--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -81,6 +81,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: apk/app-release-unsigned.apk
+          asset_path: ./frontend/android/app/build/outputs/apk/release/app-release-unsigned.apk
           asset_name: Citrus.apk
           asset_content_type: application/zip  
