--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -72,8 +72,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }} 
+          tag_name: $${{hashFiles(./src)}} 
+          release_name: Release-Citrus
       - name: Upload Release APK
         id: upload_release_asset
         uses: actions/upload-release-asset@v1.0.1
