--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -72,8 +72,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
         with:
-          tag_name: id-$${{hashFiles('./src')}} 
+          tag_name: id-$${{hashFiles('./frontend/src')}} 
           release_name: Release-Citrus
+      - name: debug 
+        run: ls -R > file.txt && cat file.txt 
       - name: Upload Release APK
         id: upload_release_asset
         uses: actions/upload-release-asset@v1.0.1
