--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 REACT_APP_BACKEND_PORT=8000
-REACT_APP_BACKEND_HOST="localhost"
+REACT_APP_BACKEND_HOST="172.28.0.1"
 REACT_APP_FRONTEND_PORT=3000
 
